--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -95,6 +95,7 @@ nav:
           - reference/clanServices/mycelium.md
           - reference/clanServices/sshd.md
           - reference/clanServices/trusted-nix-caches.md
+          - reference/clanServices/thelounge.md
           - reference/clanServices/users.md
           - reference/clanServices/hello-world.md
           - reference/clanServices/wifi.md
